# gradio-mcp-playground

./: .gitignore  .gitignore_hf_space  AGENT_ARCHITECTURE_DIAGRAM.md  AGENT_SHOWCASE.md  AGENT_TECHNICAL_OVERVIEW.md  CACHING_IMPLEMENTATION.md  CONTRIBUTING.md  DEMO_RECORDING_SCRIPT.md  HF_SPACE_DEPLOYMENT.md  HF_SPACE_FILES.md  LICENSE  MCP_INTEGRATION_STATUS.md  MCP_SERVER_USAGE.md  OPEN_ISSUES.md  README.md  README_hf_space.md  UNIFIED_DASHBOARD.md  agent_demo.py  agent_ui_fixes.py  app.py  app_hf_space.py  demo_api_key_handling.py  demo_functionality.py  demo_requirements_checking.py  deploy_all_spaces.sh  deploy_hackathon_space.sh  deploy_personal_space.sh  deploy_to_hf.sh  pyproject.toml  requirements-space.txt  requirements.txt  requirements_hf_space.txt  setup.py  streamlined_demo.py  test_connection_manager.py  test_mcp_fixes.py  travel_agent_gradio_ui_fix.md  travel_agent_immediate_prompt_fix.py  travel_agent_implementation_guide.md  travel_agent_ui_improvements.py
agent/: README.md  __init__.py  app.py  requirements.txt  setup.py  test_agent.py
agent/agents/: conversational.py  data_processor_pro.py  python_tutor.py  twitter_blog_agent.py  web_scraper_pro.py
agent/config/: default.json
agent/core/: __init__.py  agent.py  agent_builder.py  agent_runner.py  event_handlers_fix.py  event_handlers_fix.pyi  knowledge.py  registry.py  server_builder.py  unified_dashboard_fix.py  unified_dashboard_fix.pyi
agent/docs/: user_guide.md
agent/filesystem/: README.md  app.py  requirements.txt
agent/ui/: __init__.py  chat_interface.py  control_panel.py  mcp_connections_panel.py  pipeline_view.py  server_manager.py
agent/utils/: __init__.py  gradio_helpers.py
basic-template/: README.md  app.py
basic-template2/: README.md  app.py
basic-template3/: README.md  app.py  requirements.txt
docs/: api_key_handling.md  caching.md  configuration.md  dashboard_architecture.md  documentation_updates_summary.md  getting-started.md  github_tools_reference.md  mcp_server_types.md  obsidian_wsl_guide.md  performance_optimization.md  requirements_based_installation.md  user_guide.md
examples/: api_wrapper_server.py  image_processing_server.py  letter_counter.py  multi_tool_server.py  secure_storage_example.py  text_processor.py  weather_server.py
gradio_mcp_playground/: __init__.py  cache_manager.py  cli.py  client_manager.py  coding_agent.py  coding_agent.py.backup  config_manager.py  conversation_manager.py  environment_config.py  lazy_mcp_manager.py  mcp_async_client.py  mcp_client_adapter.py  mcp_client_integration.py  mcp_client_wrapper.py  mcp_connection_manager.py  mcp_management_tool.py  mcp_process_manager.py  mcp_process_wrapper.py  mcp_protocol_adapter.py  mcp_server.py  mcp_server_config.py  mcp_server_runner.py  mcp_stdio_filter.py  mcp_stdio_wrapper.py  mcp_tools_loader.py  mcp_working_client.py  parallel_server_loader.py  path_translator.py  prompt_manager.py  registry.py  secure_storage.py  server_manager.py  setup_path.py  simple_obsidian_tools.py  unified_web_ui.py  utils.py  web_ui.py
gradio_mcp_playground/config/: gradio_components.yaml  models.yaml  server_guidance.yaml
gradio_mcp_playground/templates/: basic_server.py  mcp_servers_example.json
temp_agents/: api_wrapper_pro.py  calculator_pro.py  chat_bot_pro.py  data_processor_pro.py  file_monitor_pro.py  twitter_blog_agent.py  web_scraper_pro.py
temp_mcp/: package.json
tests/: QA_QC_CHECKLIST.md  run_all_tests.py  test_basic.py  test_cache_manager.py  test_cli_comprehensive.py  test_mcp_functionality.py  test_notebook.ipynb  test_requirements_checking.py  test_secure_storage.py
(+14 files in other folders)
